[package]
name = "hispeed-viewer"
version = "1.0.0"
edition = "2021"
description = "High-performance video frame viewer for high-speed recordings"

[dependencies]
eframe = { version = "0.31", default-features = false, features = [
    "default_fonts",
    "glow",
] }
egui = "0.31"
egui_extras = { version = "0.31", features = ["image"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking"] }
sha2 = "0.10"
rfd = "0.15"
sysinfo = "0.32"
lz4_flex = "0.11"
log = "0.4"
env_logger = "0.11"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Graphics_Dxgi", "Win32_Storage_FileSystem"] }

[profile.release]
opt-level = 3
lto = true
